Tue Apr 12 10:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/LifespanStrategyPersistent.cpp:
        * tao/PortableServer/LifespanStrategyTransient.cpp:
          Removed some comments that are old

Tue Apr 12 03:58:55 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* tao/DynamicInterface/Request.inl:

	  Fixed an error in the emulation exception builds.

Tue Apr 12 09:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/*.pidl:
          Updated regeneration instructions to not list -GT

        * tao/*C.{h,cpp,inl}:
        * tao/*S.{h,cpp}:
        * tao/*A.cpp:
          Regenerated but now not generation explicit template instantiations.

          This is also done in the subdirectories.

Mon Apr 11 21:26:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/*.pidl:
          Updated regeneration instructions to not list -GT

        * tao/Messaging/*C.{h,cpp,inl}:
        * tao/Messaging/*S.{h,cpp}:
        * tao/Messaging/*A.cpp:
          Regenerated but now not generation explicit template instantiations

Mon Apr 11 10:38:26 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/tests/FT_App/FT_ReplicaFactory_i.cpp (init):

	  Fixed emulated exception related compile-time error.

Mon Apr 11 10:23:08 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* tao/DynamicInterface/Request.h (response_received):
	* tao/DynamicInterface/Request.inl:

	  Added a new proprietary method to check response alone. Thanks
	  to David Faure <dfaure@klaralvdalens-datakonsult.se> for
	  motivating this.

Mon Apr 11 10:03:45 2005  Ciju John  <john_c@ociweb.com>

        * tao/Transport.cpp (dump_iov):
          Fixed bus error. Problem due to interpretting integer as a string.

Mon Apr 11 15:58:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Options.html:
          Commit on behalf of Chris Cleeland, improved documentation of